# MySweetHomeCPP

./: CMakeLists.txt
docs/: Manual.txt
include/: common_types.h
src/: main.cpp
src/Core/: CMakeLists.txt  Device.cpp  Device.h  DeviceCollection.cpp  DeviceCollection.h  DeviceImpl.cpp  DeviceImpl.h  DeviceIterator.cpp  DeviceIterator.h  DeviceProxy.cpp  DeviceProxy.h  IDeviceImpl.h  ILightAdapter.h  IObserver.cpp  IObserver.h  LightAdapter.cpp  LightAdapter.h  NotificationHandler.cpp  NotificationHandler.h
src/Devices/: Alarm.cpp  Alarm.h  CMakeLists.txt  Camera.cpp  Camera.h  DetectionStrategy.cpp  DetectionStrategy.h  Detector.cpp  Detector.h  DetectorFactory.cpp  DetectorFactory.h  IDetectionStrategy.h  Light.cpp  Light.h  SoundSystem.cpp  SoundSystem.h  TV.cpp  TV.h
src/Logger/: CMakeLists.txt  Logger.cpp  Logger.h
src/SystemControl/: CMakeLists.txt  ISecurityMediator.h  ISystemState.cpp  ISystemState.h  ModeManager.cpp  ModeManager.h  SecurityColleague.cpp  SecurityColleague.h  SecurityManager.cpp  SecurityManager.h  SmartHome.cpp  SmartHome.h  StateManager.cpp  StateManager.h  StateMemento.cpp  StateMemento.h
src/UI/: CMakeLists.txt  CommandInvoker.cpp  CommandInvoker.h  ConsoleUtils.cpp  ConsoleUtils.h  ICommand.h  Menu.cpp  Menu.h  MenuCommands.cpp  MenuCommands.h
tests/: CMakeLists.txt  test_devices.cpp  test_menu.cpp
